tests/ui/span/E0537.stderr
error[E0537]: invalid predicate `unknown`
  --> $DIR/E0537.rs:1:7
   |
LL | #[cfg(unknown())]
   |       ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0537`.
